--- a/ProgramDaneOsobowe/src/main/java/nf/programdaneosobowe/MainWindow.form
+++ b/ProgramDaneOsobowe/src/main/java/nf/programdaneosobowe/MainWindow.form
@@ -67,10 +67,10 @@
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jButtonAddDates" min="-2" pref="320" max="-2" attributes="0"/>
-                      <Component id="jScrollPane1" alignment="0" min="-2" pref="320" max="-2" attributes="0"/>
+                      <Component id="jScrollPane1" pref="530" max="32767" attributes="0"/>
+                      <Component id="jButtonAddDates" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
