--- a/Gridlayout/src/main/java/nf/gridlayout/MainWindow.form
+++ b/Gridlayout/src/main/java/nf/gridlayout/MainWindow.form
@@ -66,6 +66,9 @@
       <SubComponents>
         <Component class="javax.swing.JTextField" name="jTextField">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="36" style="0"/>
+            </Property>
             <Property name="horizontalAlignment" type="int" value="4"/>
           </Properties>
         </Component>
