--- a/Gridlayout/src/main/java/nf/gridlayout/MainWindow.form
+++ b/Gridlayout/src/main/java/nf/gridlayout/MainWindow.form
@@ -231,6 +231,9 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="jButtonPlus">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="20" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="+"/>
           </Properties>
           <Events>
@@ -239,6 +242,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButtonMinus">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="20" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="-"/>
           </Properties>
           <Events>
@@ -247,21 +253,33 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButtonMultiple">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="20" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="x"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButtonDivide">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="20" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="/"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButtonPot">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="20" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="pot"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButtonSqrt">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="20" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="&#x221a;"/>
           </Properties>
         </Component>
